--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,21 @@
+
 .App {
   text-align: center;
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+  background-color: rgba(0,0,0,0.4);
 }
-
+.App:before {
+  content: '';
+  background: url('public/assets/images/sunset.jpg') no-repeat center center/cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -14,14 +28,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 2vh;
 }
 
 .App-link {
@@ -36,3 +48,18 @@
     transform: rotate(360deg);
   }
 }
+
+#city{
+  border:1px solid white;
+  border-radius: 25px;
+  color:white;
+  line-height: 0 !important ;
+  padding-left: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+#inputCity{
+  color:white;
+}
+
