--- a/src/public/assets/styles/map.css
+++ b/src/public/assets/styles/map.css
@@ -5,7 +5,7 @@
   }
 
   .map-container{
-    width: 100%;
-     
+    width: 50vw;
+    height: 50vh;
     box-shadow: 0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);
   }
